<resources>
    <string name="app_name">ToolCabinet</string>

    <!--常用按钮名称和提示 - start -->
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="opinion">查看</string>
    <string name="go_back">返回</string>
    <string name="air"></string>
    <string name="null_prompt">您暂未设置该信息，请点击完成设置。</string>
    <string name="set">设置</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="quit">退出</string>
    <string name="query">查询</string>
    <string name="open">打开</string>
    <string name="click_ok_to_exit">点击确定退出</string>
    <string name="fill_complete">请填写完整！</string>
    <string name="misconfiguration">填写的配置有误</string>
    <string name="add">添加</string>
    <string name="login">登陆</string>
    <!--常用按钮名称和提示 - end -->

    <!--主界面-->
    <string name="fingerprint_entry_prompt">请将手指放于屏幕下方传感器上\n或点击屏幕任意键使用密码登陆</string>
    <string name="other_login">其他方式登陆</string>
    <string name="contractor">智能物品柜应用系统</string>

    <string name="login_by_pwd">用户登录</string>
    <string name="account">账  号：</string>
    <string name="password">密  码：</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="pwd_error">您的密码错误！</string>
    <string name="pwd_null">您的账号密码为null，请联系管理员，或者在平台修改密码。</string>
    <string name="pwd_account_error">您的账户或密码错误！</string>
    <string name="account_null">无该人员记录！</string>
    <string name="no_permission">您不是管理员无法登陆</string>
    <!--主界面-->

    <!--管理菜单-->
    <string name="title_activity_admin">管理菜单</string>

    <string name="borrow_by_cabinet">按柜子借用</string>
    <string name="borrow_by_tool">按物品借用</string>
    <string name="one_click_borrowing">一键借用</string>
    <string name="one_click_return">一键归还</string>
    <string name="personnel_management">人员管理</string>
    <string name="tool_management">物品管理</string>
    <string name="change_password">密码修改</string>
    <string name="system_settings">系统设置</string>
    <string name="synchronize">同步</string>

    <!--管理菜单-->

    <!--系统设置-->
    <string name="title_activity_system_settings">系统设置</string>

    <string name="title_local_parameters">本地参数</string>
    <string name="device_id">设备编号</string>
    <string name="unit_number">单位编号</string>
    <string name="unit_address">单位地址</string>

    <string name="title_service_parameter">服务参数</string>
    <string name="platform_service_ip">平台服务IP</string>
    <string name="platform_service_port">平台服务端口</string>
    <string name="title_ip">IP：</string>
    <string name="title_port">端口：</string>
    <string name="reader_service_ip">读写器服务IP</string>
    <string name="reader_service_port">读写器服务端口</string>

    <string name="reader_device_id">读写器ID</string>
    <string name="title_reader_device_id">读写器ID：</string>
    <string name="title_cabinet_parameters">柜体参数</string>
    <string name="number_of_boxes">箱体数量</string>
    <string name="not_closed_door_alarm_time">未关门报警时间（设备重启后生效）</string>
    <string name="countdown">自动返回主界面</string>

    <string name="version_management">版本管理</string>
    <string name="app_version">APP版本</string>

    <string name="android_system">Android管理</string>
    <string name="title_display_bar">Android系统设置</string>
    <string name="display_bar">点击进入Android系统设置界面</string>
    <string name="display_bar_prompt">警告！\n请不要在Android系统设置界面里卸载（删除）FileCabinet程序，一旦卸载（删除）设备将直接报废，需返厂维修！</string>
    <string name="title_android_file_manager">文件管理器</string>
    <string name="android_file_manager">点击进入文件管理器</string>

    <string name="click_settings">点击设置</string>

    <string name="please_configure_reader_service_first">请先配置读写器ID</string>

    <string name="title_cabinet_set">柜体设置</string>
    <string name="title_cabinet_set_info">柜体详细设置</string>
    <string name="cell_number_title">格子号，唯一值：</string>
    <string name="box_name_title">格子名称：</string>
    <string name="target_address_title">锁控目标地址：</string>
    <string name="target_address_for_light_title">灯控目标地址：</string>
    <string name="source_address_title">源地址：</string>
    <string name="lock_number_title">锁号：</string>
    <string name="reader_ip_title">读写器：</string>
    <string name="antenna_number_title">天线号：</string>

    <string name="title_sound_switch">提示音</string>
    <string name="sound_switch_on">提示音开启</string>
    <string name="sound_switch_off">提示音关闭</string>

    <!--系统设置-->

    <!--物品查询-->
    <string name="title_activity_access_operate">按格子借用</string>
    <string name="title_tools">物品管理</string>
    <string name="title_tool_name">物品名称：</string>
    <string name="tool_name">物品名称名称</string>
    <string name="title_tool_cell_number">所在格子：</string>
    <string name="tool_cell_number">所在格子</string>
    <string name="title_tool_state">物品状态：</string>
    <string name="tool_state">物品状态</string>
    <string name="title_tool_epc">EPC编号：</string>
    <string name="tool_epc">EPC</string>

    <string name="tools_add">添加物品</string>
    <!--物品查询-->

    <string name="confirm_access_operation">请确认下方的物品是本次操作结果吗？</string>
    <string name="reopen">重新操作</string>
    <string name="abnormal_completion_operation">异常完成操作</string>


    <string name="title_personnel_management">人员管理</string>
    <string name="user_add">添加人员</string>

    <string name="title_access_out_by_query">出库</string>

    <string name="title_access_deposit">入库</string>


    <string name="title_open_cabinet_where_the_file_is_located">开启柜门</string>
    <string name="open_cabinet_where_the_file_is_located">%1$s存放在%2$s，是否开启%2$s的柜门</string>
    <string name="not_in_cabinet">该物品不在当前柜子！</string>
    <string name="cabinet_not_exist">未查到该格子！</string>
    <string name="no_permission_open_box">配置管理员，您无权限开启柜门！</string>

</resources>
