<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adapter_tools_item_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/card_spacing"
    android:paddingBottom="@dimen/card_spacing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/adapter_tools_name_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_medium_l_spacing"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/tool_name"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sub_medium_text" />

        <TextView
            android:id="@+id/adapter_mechanism_name_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_medium_spacing"
            android:layout_weight="3"
            android:gravity="center"
            android:text="1-2"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sub_medium_text" />

        <TextView
            android:id="@+id/adapter_tools_epc_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_medium_spacing"
            android:layout_weight="3"
            android:gravity="center"
            android:text="2019-01-01 10:10"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sub_medium_text" />


        <TextView
            android:id="@+id/adapter_tools_cell_number_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_medium_l_spacing"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/tool_cell_number"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sub_medium_text" />

        <TextView
            android:id="@+id/adapter_tools_light_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_medium_spacing"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/tool_epc"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sub_medium_text" />

    </LinearLayout>


</LinearLayout>
